--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.datasource.url=jdbc:mysql://10.10.131.102/team2
 spring.datasource.username=user2
 spring.datasource.password=Indium@234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql= true
+
+spring.kafka.bootstrap-servers= 10.10.131.102:9092
+spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
